--- a/index.html
+++ b/index.html
@@ -1,96 +1,57 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8" />
-    <title>UserLAnd Terminal Test</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 10px;
-            background: #111;
-            color: #eee;
-        }
-
-        #login,
-        #terminal {
-            margin-bottom: 10px;
-        }
-
-        input,
-        button {
-            padding: 8px;
-            margin: 4px;
-        }
-
-        iframe {
-            width: 100%;
-            height: 90vh;
-            border: none;
-            background: black;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>Terminal Test</title>
+<style>
+  body { font-family: Arial; background:#111; color:#eee; margin:0; padding:10px }
+  input, button { padding:8px; margin:4px }
+  iframe { width:100%; height:90vh; border:none; background:black }
+</style>
 </head>
-
 <body>
 
-    <div id="login">
-        <h3>Login</h3>
-        <input id="user" placeholder="Username" />
-        <input id="pass" type="password" placeholder="Password" />
-        <button onclick="login()">Login</button>
-        <span id="status"></span>
-    </div>
+<h3>Login</h3>
+<input id="user" placeholder="Usuario">
+<input id="pass" type="password" placeholder="Password">
+<button onclick="login()">Login</button>
+<button onclick="openTerminal()">Abrir Terminal</button>
 
-    <div id="terminal" style="display:none;">
-        <button onclick="openTerminal()">Abrir Terminal</button>
-        <iframe id="term"></iframe>
-    </div>
+<iframe id="terminal"></iframe>
 
-    <script>
-        const API = "http://192.168.100.196:3001";
+<script>
+const API = 'http://192.168.100.196:3001'; // ⚠️ TU IP REAL
 
-        async function login() {
-            const username = document.getElementById('user').value;
-            const password = document.getElementById('pass').value;
-            const status = document.getElementById('status');
+async function login() {
+  const res = await fetch(API + '/api/auth/login', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({
+      username: user.value,
+      password: pass.value
+    })
+  });
 
-            status.textContent = 'Conectando...';
+  if (!res.ok) return alert('Login falló');
 
-            try {
-                const res = await fetch(API + '/api/auth/login', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ username, password })
-                });
+  const data = await res.json();
+  sessionStorage.setItem('token', data.token);
+  alert('Login OK');
+}
 
-                if (!res.ok) throw new Error('Login inválido');
+async function openTerminal() {
+  const token = sessionStorage.getItem('token');
 
-                const data = await res.json();
-                sessionStorage.setItem('token', data.token);
+  const res = await fetch(API + '/api/terminal/url', {
+    headers: { Authorization: 'Bearer ' + token }
+  });
 
-                status.textContent = 'OK';
-                document.getElementById('terminal').style.display = 'block';
-            } catch (e) {
-                status.textContent = 'Error de login';
-            }
-        }
+console.log('Respuesta de /api/terminal/url:', res);
 
-        async function openTerminal() {
-            const token = sessionStorage.getItem('token');
-
-            const res = await fetch(API + '/api/terminal/url', {
-                headers: {
-                    'Authorization': 'Bearer ' + token
-                }
-            });
-
-            const data = await res.json();
-            document.getElementById('term').src = data.url;
-        }
-    </script>
+  const data = await res.json();
+  terminal.src = data.url;
+}
+</script>
 
 </body>
-
 </html>
