--- a/index.html
+++ b/index.html
@@ -1,57 +1,77 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-<meta charset="UTF-8">
-<title>Terminal Test</title>
-<style>
-  body { font-family: Arial; background:#111; color:#eee; margin:0; padding:10px }
-  input, button { padding:8px; margin:4px }
-  iframe { width:100%; height:90vh; border:none; background:black }
-</style>
+    <meta charset="UTF-8">
+    <title>Terminal Test</title>
+    <style>
+        body {
+            font-family: Arial;
+            background: #111;
+            color: #eee;
+            margin: 0;
+            padding: 10px
+        }
+
+        input,
+        button {
+            padding: 8px;
+            margin: 4px
+        }
+
+        iframe {
+            width: 100%;
+            height: 90vh;
+            border: none;
+            background: black
+        }
+    </style>
 </head>
+
 <body>
 
-<h3>Login</h3>
-<input id="user" placeholder="Usuario">
-<input id="pass" type="password" placeholder="Password">
-<button onclick="login()">Login</button>
-<button onclick="openTerminal()">Abrir Terminal</button>
+    <h3>Login</h3>
+    <input id="user" placeholder="Usuario">
+    <input id="pass" type="password" placeholder="Password">
+    <button onclick="login()">Login</button>
+    <button onclick="openTerminal()">Abrir Terminal</button>
 
-<iframe id="terminal"></iframe>
+    <iframe id="terminal"></iframe>
 
-<script>
-const API = 'http://192.168.100.196:3001'; // ⚠️ TU IP REAL
+    <script>
+        const API = 'http://192.168.100.196:3001'; // ⚠️ TU IP REAL
 
-async function login() {
-  const res = await fetch(API + '/api/auth/login', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({
-      username: user.value,
-      password: pass.value
-    })
-  });
+        async function login() {
+            const res = await fetch(API + '/api/auth/login', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({
+                    username: user.value,
+                    password: pass.value
+                })
+            });
 
-  if (!res.ok) return alert('Login falló');
+            if (!res.ok) return alert('Login falló');
 
-  const data = await res.json();
-  sessionStorage.setItem('token', data.token);
-  alert('Login OK');
-}
+            const data = await res.json();
+            sessionStorage.setItem('token', data.token);
+            alert('Login OK');
+        }
 
-async function openTerminal() {
-  const token = sessionStorage.getItem('token');
+        async function openTerminal() {
+            const token = sessionStorage.getItem('token');
 
-  const res = await fetch(API + '/api/terminal/url', {
-    headers: { Authorization: 'Bearer ' + token }
-  });
+            const res = await fetch(API + '/api/terminal/url', {
+                headers: { Authorization: 'Bearer ' + token }
+            });
 
-console.log('Respuesta de /api/terminal/url:', res);
+            console.log('Respuesta de /api/terminal/url:', res);
 
-  const data = await res.json();
-  terminal.src = data.url;
-}
-</script>
+            const data = await res.json();
+            terminal.src = data.url;
+        }
+    </script>
 
 </body>
+
 </html>
