--- a/panel/index.html
+++ b/panel/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UserLAnd Dashboard</title>
-    <meta name="description" content="Monitor and control your UserLAnd environment via web browser" />
-    <meta property="og:title" content="UserLAnd Dashboard" />
-    <meta property="og:description" content="Real-time monitoring and control dashboard for UserLAnd" />
+    <title>DroidVPS</title>
+    <meta name="description" content="Monitor and control your DroidVPS environment via web browser" />
+    <meta property="og:title" content="DroidVPS" />
+    <meta property="og:description" content="Real-time monitoring and control dashboard for DroidVPS" />
   </head>
   <body>
     <div id="root"></div>
