--- a/panel/index.html
+++ b/panel/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Monitor and control your DroidVPS environment via web browser" />
     <meta property="og:title" content="DroidVPS" />
     <meta property="og:description" content="Real-time monitoring and control dashboard for DroidVPS" />
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
